--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -7,6 +7,10 @@
   home_essay: true
   top_background: /img/top.png
   essay_list:
+    - content: 2025都来了，过的真快
+      date: 2025/01/01 17:57:04
+    - content: 一直加班一直加班，烦死了
+      date: 2024/12/22 17:57:04
     - content: 人闲的的时候是真闲
       date: 2024/12/03 17:57:04
     - content: 我真讨厌加字段😤️，加的我烦死了
