--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -7,6 +7,10 @@
   home_essay: true
   top_background: /img/top.png
   essay_list:
+    - content: 睡不着，莫名的emo
+      date: 2025/01/02 09:57:04
+    - content: 睡不着，莫名的emo
+      date: 2025/01/02 09:57:04
     - content: 2025都来了，过的真快
       date: 2025/01/01 17:57:04
     - content: 一直加班一直加班，烦死了
