--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -7,6 +7,12 @@
   home_essay: true
   top_background: /img/top.png
   essay_list:
+    - content: 除了吃饭和睡觉，很多事情都很难坚持，没有欲望和动力，像一个行尸走肉一样
+      date: 2025/06/26 14:57:04
+    - content: 啊，人怎么能那么麻木，振作起来啊
+      date: 2025/06/26 14:57:04
+    - content: 好久都没有认真记录了，就好像没活过一样，果然已经在舒适圈呆久了，每天就像一个NPC一样固定的刷新，已经开始变得麻木不仁了
+      date: 2025/06/26 09:57:04
     - content: 感冒了，又是一年梅雨季
       date: 2025/06/10 09:57:04
       image:
