--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -7,6 +7,10 @@
   home_essay: true
   top_background: /img/top.png
   essay_list:
+    - content: 在利益面前，没人会主动为你着想，甚至可能刻意忽视你。想要什么，就得自己争取
+      date: 2025/06/30 14:57:04
+    - content: 我相信爱情，但我不相信爱情会降落到我身边
+      date: 2025/06/29 14:57:04
     - content: 除了吃饭和睡觉，很多事情都很难坚持，没有欲望和动力，像一个行尸走肉一样
       date: 2025/06/26 14:57:04
     - content: 啊，人怎么能那么麻木，振作起来啊
