--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -34,21 +34,21 @@ nav:
     - title: 博客
       item:
         - name: 博客站点
-          link: https://hexo.asteroid-qiao.top/
+          link: https://hexo.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/1697097432990%E6%88%90%E5%A4%A7%E4%BA%8B.jpg
     - title: 收集的有趣网页
       item:
         - name: tower
-          link: https://tower.asteroid-qiao.top/
+          link: https://tower.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/16990216818761699021681322.png
         - name: 烟花
-          link: https://fireworks.asteroid-qiao.top/
+          link: https://fireworks.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/16990211070371699021106243.png
         - name: 魔方
-          link: https://cube.asteroid-qiao.top/
+          link: https://cube.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/16990226138881699022613057.png
         - name: ENGLISH
-          link: https://keyboard.asteroid-qiao.top/
+          link: https://keyboard.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/17510140358871751014034963.png
         - name: 收集中~
           link: /
@@ -56,19 +56,19 @@ nav:
     - title: 项目
       item:
         - name: 音乐小行星
-          link: https://music.asteroid-qiao.top/
+          link: https://music.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/17193929684811024x1024.png
         - name: 社团活动平台
-          link: https://club.asteroid-qiao.top/
+          link: https://club.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/1698653924814dragon1.jpg
         - name: 快乐买鞋城
-          link: https://buy.asteroid-qiao.top/
+          link: https://buy.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/1698653667259%E9%85%B7-1.png
         - name: ChatGPT
-          link: https://chat.asteroid-qiao.top/
+          link: https://chat.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/1699022251879chatgpt.jpg
         - name: bilibili
-          link: https://bilibili.asteroid-qiao.top/
+          link: https://bilibili.asteroidinorbit.asia/
           icon: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/17510149048671751014904514.png
         - name: 待补充
           link: /
@@ -387,7 +387,7 @@ valine:
   option:
 # waline
 waline:
-  serverURL: https://waline.asteroid-qiao.top/
+  serverURL: https://waline.asteroidinorbit.asia/
   bg: /img/lazyload9.webp
   pageview: false
   meta: false
@@ -1102,7 +1102,7 @@ home_top:
     tips: 文章推荐
     title: Alist+RaiDrive挂载阿里云盘
     image: https://gitee.com/AsteroidQiao/library-management-system/raw/master/book-avatar/1699196452934wall7.png
-    link: https://blog.asteroid-qiao.top/2023/07/31/Alist-RaiDrive%E6%8C%82%E8%BD%BD%E9%98%BF%E9%87%8C%E4%BA%91%E7%9B%98/
+    link: https://blog.asteroidinorbit.asia/2023/07/31/Alist-RaiDrive%E6%8C%82%E8%BD%BD%E9%98%BF%E9%87%8C%E4%BA%91%E7%9B%98/
 
 # 朋友圈配置
 friends_vue:
